--- a/bg5.html
+++ b/bg5.html
@@ -14,7 +14,7 @@
         /* ----------需要的背景色-------- */
         html{background: #f60003;}
         body{
-            background: url(img/bg2.jpg) center no-repeat;
+            background: url(img/bg2.jpg) top center no-repeat;
             background-size: 100% auto;
         }
     </style>
