--- a/bg6.html
+++ b/bg6.html
@@ -14,7 +14,7 @@
         /* ----------需要的背景色-------- */
         html{background: #78bb1e;}
         body{
-            background: url(img/fx1.jpg) center no-repeat;
+            background: url(img/fx1.jpg) top center no-repeat;
             background-size: 100% auto;
         }
     </style>
