--- a/bg7.html
+++ b/bg7.html
@@ -14,7 +14,7 @@
         /* ----------需要的背景色-------- */
         html{background: #ff6b01;}
         body{
-            background: url(img/fx2.jpg) center bottom no-repeat;
+            background: url(img/fx2.jpg) top center bottom no-repeat;
             background-size: 100% auto;
         }
     </style>
