--- a/A1.html
+++ b/A1.html
@@ -12,9 +12,9 @@
 
 
         /* ----------需要的背景色-------- */
-        html{background: #ff6b01;}
+        html{background: #fff;}
         body{
-            background: url(img/fx2.jpg) top center no-repeat;
+            background: url(img/1.jpg) top center no-repeat;
             background-size: 100% auto;
         }
     </style>
