--- a/A2.html
+++ b/A2.html
@@ -12,9 +12,9 @@
 
 
         /* ----------需要的背景色-------- */
-        html{background: #000;}
+        html{background: #c01c34;}
         body{
-            background: url(img/fenxiang.gif) center bottom no-repeat;
+            background: url(img/fx2.jpg) top center no-repeat;
             background-size: 100% auto;
         }
     </style>
