--- a/A3.html
+++ b/A3.html
@@ -12,9 +12,9 @@
 
 
         /* ----------需要的背景色-------- */
-        html{background: -webkit-linear-gradient(#fe5766, #ff2638);}
+        html{background: #ff3629;}
         body{
-            background: url(img/bg2.jpg) center no-repeat;
+            background: url(img/3.jpg) center no-repeat;
             background-size: 100% auto;
         }
     </style>
