--- a/A4.html
+++ b/A4.html
@@ -12,9 +12,9 @@
 
 
         /* ----------需要的背景色-------- */
-        html{background: #ff1b1e;}
+        html{background: #f83436;}
         body{
-            background: url(img/v12.jpg) center no-repeat;
+            background: url(img/4.jpg) center no-repeat;
             background-size: 100% auto;
         }
     </style>
