--- a/share.html
+++ b/share.html
@@ -10,13 +10,13 @@
             overflow: hidden;
             width: 100%;
             height: 100%;
-            background: url(img/bg2.jpg) top center no-repeat;
+            background: url(img/3.jpg) top center no-repeat;
             background-size: 100% auto;
         }
         .sharebg{
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, .7);
+            background: rgba(0, 0, 0, .1);
         }
         .sharebg img {
             width: 100%; height: auto;
@@ -26,14 +26,14 @@
         i,em{font-style: normal;}
         ul,li{list-style-type: none;}
         a,a:hover,a:focus{ text-decoration: none;}
-        body{ background: #b00e03;}
+        body{ background: #ff3629;}
     </style>
 </head>
 
 <body>
     <div class="mask">
         <div class="sharebg">
-            <img src="img/fx.png" alt="">
+            <img src="img/fenxxx.png" alt="">
         </div>
     </div>
     <script>
