--- a/A2.html
+++ b/A2.html
@@ -14,7 +14,7 @@
         /* ----------需要的背景色-------- */
         html{background: #c01c34;}
         body{
-            background: url(img/fx2.jpg) top center no-repeat;
+            background: url(img/2.jpg) top center no-repeat;
             background-size: 100% auto;
         }
     </style>
