--- a/share.html
+++ b/share.html
@@ -16,7 +16,7 @@
         .sharebg{
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, .1);
+            background: rgba(0, 0, 0, .78);
         }
         .sharebg img {
             width: 100%; height: auto;
@@ -33,7 +33,7 @@
 <body>
     <div class="mask">
         <div class="sharebg">
-            <img src="img/fenxxx.png" alt="">
+            <img src="img/6688.png" alt="">
         </div>
     </div>
     <script>
